--- a/pom.xml
+++ b/pom.xml
@@ -3,22 +3,10 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.icatproject</groupId>
-
 	<artifactId>icat.server</artifactId>
 	<version>4.5.0-SNAPSHOT</version>
 	<packaging>war</packaging>
-
-	<distributionManagement>
-		<downloadUrl>http://www.icatproject.org/mvn/repo</downloadUrl>
-		<site>
-			<id>website</id>
-			<url>scp://www.icatproject.org/var/www/html/mvn/site/icat/server/${project.version}</url>
-		</site>
-		<repository>
-			<id>repo</id>
-			<url>scp://www.icatproject.org/var/www/html/mvn/repo</url>
-		</repository>
-	</distributionManagement>
+	<name>ICAT Server</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -29,6 +17,7 @@
 		<maven.install.skip>false</maven.install.skip>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<luceneVersion>4.10.2</luceneVersion>
+		<project.scm.id>github</project.scm.id>
 	</properties>
 
 	<repositories>
@@ -38,17 +27,16 @@
 		</repository>
 	</repositories>
 
-	<description>Main pom to build all the icat components. For more information please see the individual components.</description>
-	<issueManagement>
-		<url>http://code.google.com/p/icatproject/issues/list</url>
-		<system>Google Code</system>
-	</issueManagement>
-
 	<scm>
-		<connection>scm:svn:http://icatproject.googlecode.com/svn/icat/server/trunk</connection>
-		<developerConnection>scm:svn:https://icatproject.googlecode.com/svn/icat/server/trunk</developerConnection>
-		<url>http://code.google.com/p/icatproject/source/browse/#svn%2Ficat%2Fserver%2Ftrunk</url>
+		<connection>scm:git:https://github.com/icatproject/icat.server.git</connection>
+		<developerConnection>scm:git:https://github.com/icatproject/icat.server.git</developerConnection>
+		<url>https://github.com/icatproject/icat.server</url>
 	</scm>
+
+	<issueManagement>
+		<url>https://github.com/icatproject/icat.server/issues</url>
+		<system>GitHub</system>
+	</issueManagement>
 
 	<licenses>
 		<license>
@@ -62,18 +50,24 @@
 		<url>http://www.icatproject.org</url>
 	</organization>
 
+	<distributionManagement>
+		<downloadUrl>http://www.icatproject.org/mvn/repo</downloadUrl>
+		<site>
+			<id>website</id>
+			<url>scp://www.icatproject.org/var/www/html/mvn/site/icat/server/${project.version}</url>
+		</site>
+		<repository>
+			<id>repo</id>
+			<url>scp://www.icatproject.org/var/www/html/mvn/repo</url>
+		</repository>
+	</distributionManagement>
+
 	<dependencies>
 
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
 			<version>7.0</version>
-		</dependency>
-
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>eclipselink</artifactId>
-			<version>2.5.1</version>
 		</dependency>
 
 		<dependency>
@@ -141,7 +135,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
+			<version>4.5.0</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -260,7 +254,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-release-plugin</artifactId>
-				<version>2.5.1</version>
+				<version>2.5.2</version>
 				<configuration>
 					<tagNameFormat>v@{project.version}</tagNameFormat>
 				</configuration>
@@ -379,7 +373,6 @@
 		</plugins>
 	</reporting>
 
-	<name>ICAT Server</name>
 </project>
 
 
