Fix #108 Discover info about available authenticators Fix #147 Provide getMaxEntities call Actually both are provided by a single restful call to getProperties

--- a/src/main/config/icat.properties.example
+++ b/src/main/config/icat.properties.example
@@ -2,33 +2,33 @@
 # are marked with '!'
 
 # The lifetime of a session
-lifetimeMinutes  120
+lifetimeMinutes = 120
 
 # Provide CRUD access to authz tables
-rootUserNames db/root
+rootUserNames = db/root
 
 # Restrict total number of entities to return in a search call
-maxEntities 1000
+maxEntities = 1000
 
 # Maximum ids in a list - this must not exceed 1000 for Oracle
-maxIdsInQuery 500
+maxIdsInQuery = 500
 
 # Size of cache to be used when importing data into ICAT	
-importCacheSize 50
+importCacheSize = 50
 
 # Size of cache to be used when exporting data from ICAT
-exportCacheSize 50
+exportCacheSize = 50
 	
 # Desired authentication plugin mnemonics
-authn.list db ldap anon simple
+authn.list = db ldap anon simple
 
 # JNDI for each plugin
-authn.db.jndi   java:global/authn_db-1.1.1/DB_Authenticator
-authn.ldap.jndi java:global/authn_ldap-1.1.0/LDAP_Authenticator
-authn.anon.jndi java:global/authn_anon.ear-1.0.1/authn_anon.ejb-1.0.1/ANON_Authenticator
-authn.simple.jndi java:global/authn_simple.ear-1.0.0/authn_simple.ejb-1.0.0/SIMPLE_Authenticator
+authn.db.jndi     =   java:global/authn_db-1.1.1/DB_Authenticator   
+authn.ldap.jndi   = java:global/authn_ldap-1.1.0/LDAP_Authenticator
+authn.anon.jndi   = java:global/authn_anon.ear-1.0.1/authn_anon.ejb-1.0.1/ANON_Authenticator
+authn.simple.jndi = java:global/authn_simple.ear-1.0.0/authn_simple.ejb-1.0.0/SIMPLE_Authenticator
 
-!log4j.properties icat.log4j.properties
+!log4j.properties = icat.log4j.properties
 
 # Notification setup
 notification.list = Dataset Datafile
