--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.icatproject</groupId>
 	<artifactId>icat.server</artifactId>
-	<version>4.5.1-SNAPSHOT</version>
+	<version>4.6.0-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>ICAT Server</name>
 
@@ -30,8 +31,8 @@
 		<connection>scm:git:https://github.com/icatproject/icat.server.git</connection>
 		<developerConnection>scm:git:https://github.com/icatproject/icat.server.git</developerConnection>
 		<url>https://github.com/icatproject/icat.server</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 
 	<issueManagement>
 		<url>https://github.com/icatproject/icat.server/issues</url>
@@ -73,7 +74,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.authentication</artifactId>
-			<version>4.4.0</version>
+			<version>4.5.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -129,7 +130,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.7.0</version>
+			<version>4.10.2-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
@@ -287,7 +288,7 @@
 
 					<execution>
 						<id>Install .war</id>
-						<phase>package</phase>
+						<phase>pre-integration-test</phase>
 
 						<configuration>
 							<skip>${maven.install.skip}</skip>
