--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
 		</repository>
 	</repositories>
 
+	<pluginRepositories>
+		<pluginRepository>
+			<id>miredot</id>
+			<name>MireDot Releases</name>
+			<url>http://nexus.qmino.com/content/repositories/miredot</url>
+		</pluginRepository>
+	</pluginRepositories>
+
 	<scm>
 		<connection>scm:git:https://github.com/icatproject/icat.server.git</connection>
 		<developerConnection>scm:git:https://github.com/icatproject/icat.server.git</developerConnection>
@@ -136,7 +144,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.5.0</version>
+			<version>4.6.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -166,6 +174,44 @@
 		</resources>
 
 		<plugins>
+
+			<plugin>
+				<groupId>com.qmino</groupId>
+				<artifactId>miredot-plugin</artifactId>
+				<version>1.6.2</version>
+				<executions>
+					<execution>
+						<id>miredot</id>
+						<goals>
+							<goal>restdoc</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<licence>cHJvamVjdHxvcmcuaWNhdHByb2plY3QuaWNhdC5zZXJ2ZXJ8MjAxNi0wOC0yN3x0cnVlfC0xI01Dd0NGRXBxLy92UjJXUzB0Q0tPb3lqSjBUWHNKRzRXQWhSeFVUa2c0bWNaMTRKS1RYbGlaMzEyMytreGFnPT0=</licence>
+					<output>
+						<html>
+							<location>site/miredot</location>
+							<baseUrl>https://example.com/icat</baseUrl>
+						</html>
+					</output>
+					<analysis>
+						<checks>
+							<JAVADOC_MISSING_EXCEPTION_DOCUMENTATION>failbuild</JAVADOC_MISSING_EXCEPTION_DOCUMENTATION>
+							<REST_UNMAPPED_EXCEPTION>ignore</REST_UNMAPPED_EXCEPTION>
+							<JAVADOC_MISSING_SUMMARY>failbuild</JAVADOC_MISSING_SUMMARY>
+							<JAVADOC_MISSING_INTERFACEDOCUMENTATION>failbuild</JAVADOC_MISSING_INTERFACEDOCUMENTATION>
+							<JAVADOC_MISSING_PARAMETER_DOCUMENTATION>failbuild</JAVADOC_MISSING_PARAMETER_DOCUMENTATION>
+							<JAVADOC_MISSING_AUTHORS>ignore</JAVADOC_MISSING_AUTHORS>
+							<JAXRS_MISSING_PRODUCES>failbuild</JAXRS_MISSING_PRODUCES>
+							<JAXRS_MISSING_CONSUMES>failbuild</JAXRS_MISSING_CONSUMES>
+							<JAXRS_MISSING_PATH_PARAM>failbuild</JAXRS_MISSING_PATH_PARAM>
+							<UNREACHABLE_RESOURCE>failbuild</UNREACHABLE_RESOURCE>
+							<PARTIAL_RESOURCE_OVERLAP>failbuild</PARTIAL_RESOURCE_OVERLAP>
+						</checks>
+					</analysis>
+				</configuration>
+			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
