Move config files to correct directory and fix error with missed annotation.

--- a/src/main/config/icat-setup.properties.example
+++ b/src/main/config/icat-setup.properties.example
@@ -1,16 +1,27 @@
-# Driver and connection properties for Oracle
-!driver=oracle.jdbc.pool.OracleDataSource
-!dbProperties=url="'"jdbc:oracle:thin:@//localhost:1521/XE"'":ImplicitCachingEnabled=true:MaxStatements=200:user=icat:password=secret 
+# Glassfish
+secure         = true
+container      = glassfish
+home           = /home/fisher/pf/glassfish4
+port           = 4848
 
-# Driver and connection properties for MySQL
-!driver=com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-!dbProperties=user=icat:password=secret:databaseName=icat
+# WildFly
+!secure         = false
+!container      = wildfly
+!home           = /home/fisher/pf/wildfly
+!port           = 9990
 
-# Must contain "glassfish/domains"
-!glassfish=/home/fisher/glassfish4
+# Oracle
+!db.vendor      = oracle
+!db.driver      = oracle.jdbc.pool.OracleDataSource
+!db.url         = jdbc:oracle:thin:@//lcgdb02-vip.gridpp.rl.ac.uk:1521/orisa.gridpp.rl.ac.uk
+!db.url         = jdbc:oracle:thin:@//localhost:1521/XE
+!db.username    = icat
+!db.password    = secret
 
-# Port for glassfish admin calls (normally 4848)
-port=4848
-
-# Hostname for central JMS queue - not needed for local installation
-!jmsHostPort=smfisher.esc.rl.ac.uk:7676
+# MySQL
+db.vendor      = mysql
+db.driver      = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
+!db.driver      = mysql-connector-java-5.1.30-bin.jar_com.mysql.jdbc.Driver_5_1
+db.url         = jdbc:mysql://localhost:3306/icat
+db.username    = icat
+db.password    = secret
