The new write() call which combines create and update functionality has been completed.

--- a/src/main/config/icat.properties.example
+++ b/src/main/config/icat.properties.example
@@ -39,8 +39,8 @@ authn.anon.friendly = Anonymous
 
 # Notification setup
 notification.list = Dataset Datafile
-notification.Dataset = CUD
-notification.Datafile = CUD
+notification.Dataset = CU
+notification.Datafile = CU
 
 # Call logging setup
 log.list = file table
