--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.authentication</artifactId>
-			<version>4.5.0-SNAPSHOT</version>
+			<version>4.5.0</version>
 		</dependency>
 
 		<dependency>
@@ -138,13 +138,13 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.12.0-SNAPSHOT</version>
+			<version>4.12.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.6.0-SNAPSHOT</version>
+			<version>4.6.0</version>
 			<scope>test</scope>
 		</dependency>
 
