--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.icatproject</groupId>
 	<artifactId>icat.server</artifactId>
-	<version>4.6.0-SNAPSHOT</version>
+	<version>4.6.0</version>
 	<packaging>war</packaging>
 	<name>ICAT Server</name>
 
@@ -39,7 +38,7 @@
 		<connection>scm:git:https://github.com/icatproject/icat.server.git</connection>
 		<developerConnection>scm:git:https://github.com/icatproject/icat.server.git</developerConnection>
 		<url>https://github.com/icatproject/icat.server</url>
-		<tag>HEAD</tag>
+		<tag>v4.6.0</tag>
 	</scm>
 
 	<issueManagement>
