--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.icatproject</groupId>
 	<artifactId>icat.server</artifactId>
-	<version>4.6.1</version>
+	<version>4.6.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>ICAT Server</name>
 
