Fix #127 Update rules do not work as expected Fix #164 Old configuration parameters on icat.properties.example

--- a/src/main/config/icat.properties.example
+++ b/src/main/config/icat.properties.example
@@ -43,9 +43,7 @@ notification.Dataset = CU
 notification.Datafile = CU
 
 # Call logging setup
-log.list = file table
-log.file = S
-log.table = S
+log.list = SESSION WRITE READ INFO
 
 # Lucene
 lucene.directory = ../data/icat/lucene
