--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.12.0</version>
+			<version>4.13.0-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
