--- a/pom.xml
+++ b/pom.xml
@@ -137,13 +137,13 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.13.0-SNAPSHOT</version>
+			<version>4.14.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.7.0-SNAPSHOT</version>
+			<version>4.7.0</version>
 			<scope>test</scope>
 		</dependency>
 
