--- a/src/main/config/icat-setup.properties.example
+++ b/src/main/config/icat-setup.properties.example
@@ -1,27 +1,33 @@
 # Glassfish
 secure         = true
-container      = glassfish
+container      = Glassfish
 home           = /home/fisher/pf/glassfish4
 port           = 4848
 
 # WildFly
 !secure         = false
-!container      = wildfly
+!container      = JBoss
 !home           = /home/fisher/pf/wildfly
 !port           = 9990
 
 # Oracle
-!db.vendor      = oracle
 !db.driver      = oracle.jdbc.pool.OracleDataSource
 !db.url         = jdbc:oracle:thin:@//lcgdb02-vip.gridpp.rl.ac.uk:1521/orisa.gridpp.rl.ac.uk
 !db.url         = jdbc:oracle:thin:@//localhost:1521/XE
 !db.username    = icat
 !db.password    = secret
 
+# Optional Oracle
+!db.target      = Oracle11
+!db.logging     = FINE
+
 # MySQL
-db.vendor      = mysql
 db.driver      = com.mysql.jdbc.jdbc2.optional.MysqlDataSource
-!db.driver      = mysql-connector-java-5.1.30-bin.jar_com.mysql.jdbc.Driver_5_1
+!db.driver     = mysql-connector-java-5.1.30-bin.jar_com.mysql.jdbc.Driver_5_1
 db.url         = jdbc:mysql://localhost:3306/icat
 db.username    = icat
 db.password    = secret
+
+# Optional MySQL
+!db.target      = MySQL
+!db.logging     = FINE
