--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 
 	<groupId>org.icatproject</groupId>
 	<artifactId>icat.server</artifactId>
-	<version>4.7.0</version>
+	<version>4.7.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>ICAT Server</name>
 
@@ -38,7 +38,7 @@
 		<connection>scm:git:https://github.com/icatproject/icat.server.git</connection>
 		<developerConnection>scm:git:https://github.com/icatproject/icat.server.git</developerConnection>
 		<url>https://github.com/icatproject/icat.server</url>
-		<tag>v4.7.0</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<issueManagement>
