--- a/pom.xml
+++ b/pom.xml
@@ -142,7 +142,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.7.0</version>
+			<version>4.8.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
 
