--- a/pom.xml
+++ b/pom.xml
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.15.0-SNAPSHOT</version>
+			<version>4.15.0</version>
 		</dependency>
 
 		<dependency>
