Needs a few more properties then ready to go

--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>org.icatproject</groupId>
@@ -12,8 +13,6 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<repoUrl>https://repo.icatproject.org/repo</repoUrl>
-		<serverPort>8181</serverPort>
-		<serverHost>localhost</serverHost>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<project.scm.id>github</project.scm.id>
 		<gitUrl>https://github.com/icatproject/icat.server</gitUrl>
@@ -38,8 +37,8 @@
 		<connection>scm:git:${gitUrl}.git</connection>
 		<developerConnection>scm:git:${gitUrl}.git</developerConnection>
 		<url>${gitUrl}</url>
-	  <tag>HEAD</tag>
-  </scm>
+		<tag>HEAD</tag>
+	</scm>
 
 	<issueManagement>
 		<url>${gitUrl}/issues</url>
@@ -97,7 +96,7 @@
 			<scope>test</scope>
 		</dependency>
 
-	
+
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.json</artifactId>
@@ -161,12 +160,12 @@
 				<artifactId>miredot-plugin</artifactId>
 				<version>1.6.2</version>
 				<executions>
-	<!-- <execution> -->
-	<!-- <id>miredot</id> -->
-	<!-- <goals> -->
-	<!-- <goal>restdoc</goal> -->
-	<!-- </goals> -->
-	<!-- </execution> -->
+					<!-- <execution> -->
+					<!-- <id>miredot</id> -->
+					<!-- <goals> -->
+					<!-- <goal>restdoc</goal> -->
+					<!-- </goals> -->
+					<!-- </execution> -->
 				</executions>
 				<configuration>
 					<licence>cHJvamVjdHxvcmcuaWNhdHByb2plY3QuaWNhdC5zZXJ2ZXJ8MjAxOC0wOS0xNXx0cnVlfC0xI01DMENGRzRQaDRMdlpvZlRwK0xsMmdENHFrZGR1VGtGQWhVQWk0eGh5cld4b25PTEJjWUhHS0pBbTcxa3VwST0=</licence>
@@ -224,6 +223,9 @@
 						</exclude>
 
 					</excludes>
+					<systemPropertyVariables>
+						<luceneUrl>${luceneUrl}</luceneUrl>
+					</systemPropertyVariables>
 					<testFailureIgnore>false</testFailureIgnore>
 				</configuration>
 			</plugin>
@@ -240,6 +242,7 @@
 					<systemPropertyVariables>
 						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
 						<serverUrl>${serverUrl}</serverUrl>
+						<luceneUrl>${luceneUrl}</luceneUrl>
 					</systemPropertyVariables>
 				</configuration>
 				<executions>
