--- a/src/main/config/icat.properties.example
+++ b/src/main/config/icat.properties.example
@@ -43,7 +43,7 @@ notification.Datafile = CU
 log.list = SESSION WRITE READ INFO
 
 # Lucene
-lucene.directory = ../data/icat/lucene
+lucene.url = https://localhost:8181
 lucene.populateBlockSize = 10000
 
 # JMS - uncomment and edit if needed
