--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -12,7 +12,7 @@ authn.ldap.jndi     = java:global/authn.ldap-1.2.1-SNAPSHOT/LDAP_Authenticator
 authn.ldap.admin    = true
 authn.ldap.friendly = Federal Id
 
-authn.simple.jndi = java:global/authn.simple-1.1.1-SNAPSHOT/SIMPLE_Authenticator
+authn.simple.jndi = java:global/authn.simple-1.2.0-SNAPSHOT/SIMPLE_Authenticator
 
 authn.anon.url     = https://smfisher:8181
 authn.anon.friendly = Anonymous
@@ -27,5 +27,7 @@ lucene.url = https://smfisher:8181
 lucene.populateBlockSize = 10000
 lucene.backlogHandlerFile = ../data/icat/luceneBacklogHandlerFile
 lucene.backlogHandlerIntervalSeconds = 60
+
+!cluster = https://smfisher:8181
 
 key = wombat
