--- a/src/main/config/run.properties.example
+++ b/src/main/config/run.properties.example
@@ -47,9 +47,9 @@ lucene.url = https://localhost:8181
 lucene.populateBlockSize = 10000
 lucene.backlogHandlerFile = ../data/icat/luceneBacklogHandlerFile
 lucene.backlogHandlerIntervalSeconds = 60
-				
-# JMS - uncomment and edit if needed
-!jms.topicConnectionFactory = java:comp/DefaultJMSConnectionFactory
+
+# List members of cluster
+!cluster = http://vm200.nubes.stfc.ac.uk:8080 https://smfisher:8181				
 
 # Optional key which must match that of the IDS server if the IDS is in use and has a key for digest protection of Datafile.location
 !key = ???
