--- a/pom.xml
+++ b/pom.xml
@@ -112,7 +112,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.15.1</version>
+			<version>4.16.1-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
