Not ready yet - but commit to keep it safe

--- a/pom.xml
+++ b/pom.xml
@@ -225,6 +225,7 @@
 					</excludes>
 					<systemPropertyVariables>
 						<luceneUrl>${luceneUrl}</luceneUrl>
+						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
 					</systemPropertyVariables>
 					<testFailureIgnore>false</testFailureIgnore>
 				</configuration>
