--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.authentication</artifactId>
-			<version>4.5.1-SNAPSHOT</version>
+			<version>4.6.0</version>
 		</dependency>
 
 		<dependency>
@@ -112,7 +112,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.utils</artifactId>
-			<version>4.16.1-SNAPSHOT</version>
+			<version>4.16.0</version>
 		</dependency>
 
 		<dependency>
