Fix broken test

--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,7 @@
 
 					</excludes>
 					<systemPropertyVariables>
+						<javax.net.ssl.trustStore>${javax.net.ssl.trustStore}</javax.net.ssl.trustStore>
 						<luceneUrl>${luceneUrl}</luceneUrl>
 					</systemPropertyVariables>
 					<testFailureIgnore>false</testFailureIgnore>
