--- a/pom.xml
+++ b/pom.xml
@@ -118,7 +118,7 @@
 		<dependency>
 			<groupId>org.icatproject</groupId>
 			<artifactId>icat.client</artifactId>
-			<version>4.9.0-SNAPSHOT</version>
+			<version>4.9.0</version>
 			<scope>test</scope>
 		</dependency>
 
