--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -25,8 +25,9 @@ log.list = SESSION WRITE READ INFO
 
 lucene.url = https://smfisher:8181
 lucene.populateBlockSize = 10000
-lucene.backlogHandlerFile = ../data/icat/luceneBacklogHandlerFile
+lucene.directory = ${HOME}/data/icat/lucene
 lucene.backlogHandlerIntervalSeconds = 60
+lucene.enqueuedRequestIntervalSeconds = 3
 
 !cluster = https://smfisher:8181
 
