Only index entities listed in run.properties

--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -1,21 +1,13 @@
 # This default run.properties file is only used in development
 lifetimeMinutes = 120
-rootUserNames = db/root
+rootUserNames = simple/root
 maxEntities = 10000
 maxIdsInQuery = 500
 importCacheSize = 50
 exportCacheSize = 50
-authn.list = db ldap simple anon
-authn.db.url       = https://smfisher:8181
+authn.list = simple
 
-authn.ldap.url     = https://smfisher:8181
-authn.ldap.admin    = true
-authn.ldap.friendly = Federal Id
-
-authn.simple.url     = https://smfisher:8181
-
-authn.anon.url     = https://smfisher:8181
-authn.anon.friendly = Anonymous
+authn.simple.url     = https://localhost.localdomain:18181
 
 notification.list = Dataset Datafile
 notification.Dataset = CU
@@ -23,11 +15,12 @@ notification.Datafile = CU
 
 log.list = SESSION WRITE READ INFO
 
-lucene.url = https://smfisher:8181
+lucene.url = https://localhost.localdomain:18181
 lucene.populateBlockSize = 10000
 lucene.directory = ${HOME}/data/icat/lucene
 lucene.backlogHandlerIntervalSeconds = 60
 lucene.enqueuedRequestIntervalSeconds = 3
+lucene.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
 
 !cluster = https://smfisher:8181
 
