Correct changes to run.properties

--- a/src/main/resources/run.properties
+++ b/src/main/resources/run.properties
@@ -1,13 +1,14 @@
 # This default run.properties file is only used in development
 lifetimeMinutes = 120
-rootUserNames = simple/root
+rootUserNames = db/root simple/root
 maxEntities = 10000
 maxIdsInQuery = 500
 importCacheSize = 50
 exportCacheSize = 50
-authn.list = simple
+authn.list = db simple
 
-authn.simple.url     = https://localhost.localdomain:18181
+authn.db.url     = https://localhost.localdomain:8181
+authn.simple.url     = https://localhost.localdomain:8181
 
 notification.list = Dataset Datafile
 notification.Dataset = CU
@@ -15,12 +16,14 @@ notification.Datafile = CU
 
 log.list = SESSION WRITE READ INFO
 
-lucene.url = https://localhost.localdomain:18181
+lucene.url = https://localhost.localdomain:8181
 lucene.populateBlockSize = 10000
-lucene.directory = ${HOME}/data/icat/lucene
+lucene.directory = ${HOME}/data/lucene
 lucene.backlogHandlerIntervalSeconds = 60
 lucene.enqueuedRequestIntervalSeconds = 3
-lucene.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
+# Configure this option to prevent certain entities being indexed
+# For example, remove Datafile and DatafileParameter
+!lucene.entitiesToIndex = Datafile Dataset Investigation InvestigationUser DatafileParameter DatasetParameter InvestigationParameter Sample
 
 !cluster = https://smfisher:8181
 
