Insert script section to ensure we run mvn install rather than mvn test (as the latter only runs unit tests)

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,6 @@ install:
  - mv vault.yml icat-ansible/group_vars/all
  - 'sed -i -e "s/^payara_user: ''glassfish''/payara_user: ''travis''/" icat-ansible/group_vars/all/vars.yml'
  - ansible-playbook --vault-password-file ./vault_pass.txt --inventory ./hosts icat-ansible/icat-dev-base-hosts.yml
+
+script:
+ - mvn install -B
