Fix payara path command by putting the command in a file and then sourcing it

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,9 @@ install:
  - 'sed -i -e "s/^payara_user: ''glassfish''/payara_user: ''travis''/" icat-ansible/group_vars/all/vars.yml'
  - ansible-playbook --vault-password-file ./vault_pass.txt --inventory ./hosts icat-ansible/icat-dev-base-hosts.yml
 
+before_script:
+ - grep payara ~/.bash_profile > payara_path_command
+ - source payara_path_command
+
 script:
  - mvn install -B
