--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,8 @@ before_script:
  - source payara_path_command
  - HOSTNAME=$(hostname)
  - 'sed -i -e "s/localhost\.localdomain/${HOSTNAME}/" src/main/resources/run.properties'
+ - ICAT_SERVER_VERSION=$(grep 'icat_server=[0-9].[0-9].[0-9]' /etc/ansible/facts.d/local.fact | grep -o '[0-9].[0-9].[0-9]')
+ - asadmin undeploy icat.server-$ICAT_SERVER_VERSION
 
 script:
  - mvn install -B
