--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ install:
  - sudo add-apt-repository universe
  - sudo apt-get update
  - git clone https://github.com/icatproject-contrib/icat-ansible.git
- - echo -e "[icat-dev-base-hosts]\nlocalhost ansible_connection=local" > hosts
+ - echo -e "[icat-server-dev-hosts]\nlocalhost ansible_connection=local" > hosts
  - echo -e $ANSIBLE_VAULT_PASSWORD > vault_pass.txt
  - mv vault.yml icat-ansible/group_vars/all
  - 'sed -i -e "s/^payara_user: ''glassfish''/payara_user: ''travis''/" icat-ansible/group_vars/all/vars.yml'
- - ansible-playbook --vault-password-file ./vault_pass.txt --inventory ./hosts icat-ansible/icat-dev-base-hosts.yml
+ - ansible-playbook --vault-password-file ./vault_pass.txt --inventory ./hosts icat-ansible/icat-server-dev-hosts.yml
 
 before_script:
  - grep payara ~/.bash_profile > payara_path_command
