--- a/.travis.yml
+++ b/.travis.yml
@@ -14,9 +14,9 @@ install:
  - sudo apt-get update
  - git clone https://github.com/icatproject-contrib/icat-ansible.git
  - echo -e "[icat-server-dev-hosts]\nlocalhost ansible_connection=local" > hosts
- - echo -e $ANSIBLE_VAULT_PASSWORD > vault_pass.txt
+ - echo -e "icattravispw" > vault_pass.txt
  - mv vault.yml icat-ansible/group_vars/all
- - 'sed -i -e "s/^payara_user: ''glassfish''/payara_user: ''travis''/" icat-ansible/group_vars/all/vars.yml'
+ - 'sed -i -e "s/^payara_user: \"glassfish\"/payara_user: \"travis\"/" icat-ansible/group_vars/all/vars.yml'
  - ansible-playbook --vault-password-file ./vault_pass.txt --inventory ./hosts icat-ansible/icat-server-dev-hosts.yml
 
 before_script:
@@ -30,4 +30,3 @@ after_failure:
  - cat /home/travis/logs/lucene.log
  - cat /home/travis/logs/icat.log
  - cat /home/travis/payara*/glassfish/domains/domain1/logs/server.log
-
