--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 		<connection>scm:git:${gitUrl}.git</connection>
 		<developerConnection>scm:git:${gitUrl}.git</developerConnection>
 		<url>${gitUrl}</url>
-		<tag>HEAD</tag>
+		<tag>v4.11.1</tag>
 	</scm>
 
 	<issueManagement>
