--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -71,6 +71,12 @@ jobs:
           source payara_path_command
           mvn install -DskipTests
 
+      - name: Run Unit Tests
+        run: mvn test -B
+
+      - name: Run Integration Tests
+        run: mvn failsafe:integration-test -B
+
       - name: After Failure
         if: ${{ failure() }}
         run: |
